--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "ts-node src/index.ts",
     "test": "jest",
-    "build": "tsc"
+    "build:tsc": "tsc",
+    "build:minify": "terser index.js --output='index.js'",
+    "build": "npm-run-all build:*"
   },
   "repository": {
     "type": "git",
@@ -29,6 +31,8 @@
   "devDependencies": {
     "@types/jest": "^27.0.3",
     "jest": "^27.4.3",
+    "npm-run-all": "^4.1.5",
+    "terser": "^5.10.0",
     "ts-jest": "^27.1.0"
   }
 }
